# SBCK-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README-pypi.md  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: build.yaml
SBCK/: __AbstractBC.py  __CDFt.py  __OTC.py  __QDM.py  __QM.py  __QQD.py  __R2D2.py  __RBC.py  __XClimPPP.py  __dOTC.py  __dTSMBC.py  __decorators.py  __init__.py  __miscBC.py  __others_1d.py  __others_Nd.py  __release.py
SBCK/clim/: __apply_bcm.py  __init__.py  __stats.py  __tools.py  __zapply_bcm.py  __zstats.py
SBCK/datasets/: __multivariates.py  __univariates.py
SBCK/metrics/: __decorators.py  __wasserstein.py
SBCK/misc/: __init__.py  __linalg.py  __sys.py
SBCK/mm/: __AlphaPooling.py  __EnsBC.py  __init__.py
SBCK/ppp/: __BCISkipNotValid.py  __DiffRef.py  __Extremes.py  __LinkFunction.py  __MomentsBC.py  __NanValues.py  __OTCNoise.py  __PPPDiffRef.py  __PPPExtremes.py  __PPPFunctionLink.py  __PPPLinkFunction.py  __PPPNanValues.py  __PPPOTCNoise.py  __PPPSSR.py  __PPPSys.py  __PrePostProcessing.py  __SSR.py  __Shift.py  __Shuffle.py  __Sys.py  __checkf.py  __init__.py
SBCK/stats/: __SparseHist.py  __init__.py  __rv_extend.py  __shift.py  __shuffle.py  __sparse_distance.py  __transport.py
SBCK/stats/src/: stats.cpp
SBCK/tools/: __SparseHist.py  __init__.py  __linalg.py  __misc.py  __rv_extend.py  __shuffle.py  __stats.py
recipe/: env.yml  recipe.yaml  variants.yaml
sbck/: __IdBC.py  __XClimPPP.py  __dOTC.py  __init__.py
sbck/datasets/: __univariates.py
sbck/metrics/: __decorators.py  __wasserstein.py
sbck/ppp/: __PPPLinkFunction.py  __PPPSSR.py  __PrePostProcessing.py  __init__.py
sbck/tools/src/: tools.cpp
src/: stats.cpp
tests/: test_SBCK.py  test_SBCK_clim.py  test_SBCK_mm.py  test_SBCK_ppp.py  test_SBCK_stats.py  test_SBCK_tools.py
