[tool.poetry]
name = "sbck"
version = "1.4.0"
description = "Statistical Bias Correction Kit"
authors = ["Yoann Robin <yoann.robin.k@gmail.com>"]
license = "GNU General Public License v3"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[eigen]
auto_install = true
usr_include = ""

[tool.poetry.dependencies]
python = ">3.9,<3.12"
numpy = "^1.26"
scipy = "^1.11"
matplotlib = "^3.0"
pybind11 = "^2.2"
pot = "^0.9.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools", "pybind11>=^2.2,<3"]
build-backend = "poetry.core.masonry.api"
